@@ -1,3 +1,8 @@
+Wed Feb 25 15:59:35 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* dir.c (push_pattern, push_glob): make globbed file names same
+	  encoding to the given pattern.
+
 Wed Feb 25 15:27:16 2015  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* tool/merger.rb: support 2.1+ versioning scheme.
